[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/ToxicCard.png" type="Texture" id=1]
[ext_resource path="res://Resources/Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/ToxinCard.gd" type="Script" id=3]
[ext_resource path="res://Sprites/AttackButton.png" type="Texture" id=4]
[ext_resource path="res://Sprites/PickButton.png" type="Texture" id=5]
[ext_resource path="res://Scenes/DiscardSound.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Blood.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/BloodParticles.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=3]
resource_name = "Discard"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 55.8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ), Vector2( 0, 58 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Name:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Buff:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "OnEnter"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, -16 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Name:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( -7, -15 ), Vector2( -7, -1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Buff:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( -7, -10 ), Vector2( -7, 4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Name:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Buff:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Buff2:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( -9, -8 ), Vector2( -9, 8 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Buff2:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Name:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -7, -15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Buff:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -7, -10 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.1, 1.1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Name:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Buff:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite/Area:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -11, -15 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprite:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Buff2:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -10, 8 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Buff2:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Card" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -16 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 1 )

[node name="Area" type="Control" parent="Sprite"]
margin_left = -11.0
margin_top = -15.0
margin_right = 11.0
margin_bottom = 15.0

[node name="Name" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -7.0
margin_top = -15.0
margin_right = 43.0
margin_bottom = -1.0
rect_scale = Vector2( 0.6, 0.6 )
custom_colors/default_color = Color( 0.94902, 0.65098, 0.368627, 1 )
custom_fonts/normal_font = ExtResource( 2 )
text = "POISON"

[node name="Buff" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -7.0
margin_top = -10.0
margin_right = 41.0
margin_bottom = 5.0
rect_scale = Vector2( 0.6, 0.6 )
custom_colors/default_color = Color( 0.94902, 0.65098, 0.368627, 1 )
custom_fonts/normal_font = ExtResource( 2 )
text = "Atk: 1"

[node name="Buff2" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -10.0
margin_top = 8.0
margin_right = 38.0
margin_bottom = 23.0
rect_scale = Vector2( 0.6, 0.6 )
custom_colors/default_color = Color( 0.94902, 0.65098, 0.368627, 1 )
custom_fonts/normal_font = ExtResource( 2 )
text = "Turn: +1"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "OnEnter"
anims/Discard = SubResource( 3 )
anims/OnEnter = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="AttackButton" type="TextureButton" parent="."]
visible = false
margin_left = -16.0
margin_top = -10.0
margin_right = -9.0
margin_bottom = -3.0
mouse_filter = 1
texture_normal = ExtResource( 4 )

[node name="PickButton" type="TextureButton" parent="."]
visible = false
margin_left = -16.0
margin_top = -2.0
margin_right = -9.0
margin_bottom = 5.0
texture_normal = ExtResource( 5 )

[node name="DiscardSound" parent="." instance=ExtResource( 6 )]

[node name="Blood" parent="." instance=ExtResource( 7 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BloodParticles" parent="CanvasLayer" instance=ExtResource( 8 )]
position = Vector2( 104, 48 )

[connection signal="mouse_entered" from="Sprite/Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Sprite/Area" to="." method="_on_Area_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="mouse_entered" from="AttackButton" to="." method="_on_AttackButton_mouse_entered"]
[connection signal="mouse_exited" from="AttackButton" to="." method="_on_AttackButton_mouse_exited"]
[connection signal="pressed" from="AttackButton" to="." method="_on_AttackButton_pressed"]
[connection signal="mouse_entered" from="PickButton" to="." method="_on_PickButton_mouse_entered"]
[connection signal="mouse_exited" from="PickButton" to="." method="_on_PickButton_mouse_exited"]
[connection signal="pressed" from="PickButton" to="." method="_on_PickButton_pressed"]
